mobile view and alignment fixes

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -77,8 +77,29 @@
   .footer-layout .footer-top,
   .footer-layout .footer-bottom {
     flex-direction: column;
-    gap: 2rem;
     align-items: start;
+    padding: 24px 20px 32px 20px;
+  }
+  .footer-layout {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+
+  .sitemap {
+    gap: 4.8rem !important;
+    font-size: 1.6rem;
+  }
+  .social-gap {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 32px;
+  }
+
+  .mobile-view-footer-bottom {
+    font-size: 1.6rem;
   }
   .footer-layout .sitemap {
     grid-template-columns: 1fr 1fr;
